--- a/styles/style.css
+++ b/styles/style.css
@@ -1,84 +1,122 @@
-body{
+*{
     margin: 0;
+    font-family: sans-serif;
+}
+
+header{
+    background-color: #3C593E;
+
+    @media(min-width:750px){
+        display: flex;
+        align-items: center;
+    }
+}
+
+.ham-items{
+    background-color: #3c593e79;
+    backdrop-filter: blur(10px);
+    list-style: none;
+    height: 100vh;
+    width: 100%;
+    max-width: 350px;
+    position: fixed;
+    right: -350px;
+    transition: .3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    gap: 1.5em;
+    font-size: 1.5em;
+    @media(min-width:750px){
+        right:0;
+        flex-direction: row;
+        height: auto;
+        background-color: #3c593e72;
+    }
+}
+
+.ham-items.active{
+    right: 0;
+}
+
+ul a{
+    text-decoration: none;
+    color: white;
+}
+
+li:nth-child(1){
+    margin-top: 5em;
+    @media(min-width:750px){
+        margin-top: 0;
+    }
 }
 
 nav{
+    display: flex;
     background-color: #3C593E;
-    padding-block: 1em;
-}
-
-img{
-    height: 6em;
-    border-radius: 1em;
-}
-
-.sideBar{
-    display: none;
-
-    @media(min-width: 750px){
-        display: flex;
-        /* justify-content: flex-end; */
-    }
-}
-
-.sideBar{
-    position: fixed;
-    top: -1em;
-    right: 0;
-    height: 100vh;
-    width: 100%;
-    z-index: 999;
-    background-color: #3c593e6d;
-    backdrop-filter: blur(10px);
-    /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1); */
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 2em;
-    @media(min-width: 400px){
-            width: 16em;
-    }
-} 
-
-
-
-
-nav ul{
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-}
-
-nav a{
-    height: 100%;
-    padding: 0 2em;
-    text-decoration: none;
-    display: flex;
+    padding: 2em;
     align-items: center;
-    color: white;
 }
 
-nav a:active{
-    background-color: rgba(14, 56, 0, 0.41);
+.mascotte{
+    width: 4em;
+    height: 4em;
+    padding: .5em;
+    border-radius: .5em;
+    transition-duration: .3s;
 }
 
-nav li:first-child{
-    margin-right: auto;
+.mascotte:hover{
+    background-color: #263927;
 }
 
-.hideOnMobile{
-    display: none;
-    color: white;
-    @media(min-width:750px){
-        display: flex;
-    }
+nav button{
+    appearance: none;
+    background: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
-.menuButton{
-    @media(min-width:750px){
-        display: none;
-    }
+.ham-menu{
+    width: 3em;
+    height: 3em;
+    margin-left: auto;
+    position: relative;
+}
+
+.ham-menu span{
+    height: .3em;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .4s ease;
+}
+
+.ham-menu span:nth-child(1){
+    top: 25%;
+}
+
+.ham-menu span:nth-child(3){
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1){
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2){
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3){
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 main{
@@ -89,17 +127,64 @@ main{
     align-items: center;
     gap: 2em;
     text-align: center;
+
+}
+
+.harry{
+    height: 5em;
+    width: 5em;
+    position: fixed;
+    right: -50px;
+    /* overflow: hidden; */
 }
 
 section{
     background-color: #F9EAC3;
     padding: 2em;
+    width: 70%;
+    border-radius: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.bottom-text{
+    color: #3C593E;
+}
+
+section.open{
+    display: flex;
+    text-align: start;
+    transform: rotate(45deg);
 }
 
 footer{
     background-color: #3C593E;
+    padding: 2em;
 }
 
 summary{
     cursor: pointer;
+}
+
+.rotate{
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes rotate{
+    50%{
+        transform: translateX(-20em) rotate(180deg);
+    }
+
+    100%{
+        transform: translateX(0) rotate(360deg);
+    }
+}
+
+@media(min-width: 750px){
+    .ham-menu{
+        display: none;
+    }
 }
