--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,21 @@
 
 header{
     background-color: #3C593E;
+}
 
-    @media(min-width:750px){
-        display: flex;
-        align-items: center;
+h1{
+    color: white;
+    margin-left: .5em;
+    @media(min-width: 750px){
+        font-size: 4em;
     }
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    margin-left: auto;
 }
 
 .ham-items{
@@ -28,12 +38,7 @@ header{
     padding: 0;
     gap: 1.5em;
     font-size: 1.5em;
-    @media(min-width:750px){
-        right:0;
-        flex-direction: row;
-        height: auto;
-        background-color: #3c593e72;
-    }
+    z-index: 1;
 }
 
 .ham-items.active{
@@ -43,13 +48,14 @@ header{
 ul a{
     text-decoration: none;
     color: white;
+    padding: 1em;
+}
+ul a:hover{
+    background-color: #496d4c6d;
 }
 
 li:nth-child(1){
     margin-top: 5em;
-    @media(min-width:750px){
-        margin-top: 0;
-    }
 }
 
 nav{
@@ -84,6 +90,7 @@ nav button{
     height: 3em;
     margin-left: auto;
     position: relative;
+    z-index: 2;
 }
 
 .ham-menu span{
@@ -119,15 +126,26 @@ nav button{
     transform: translate(-50%, -50%) rotate(-45deg);
 }
 
+.rotate{
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
 main{
-    margin-block: 2em;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     gap: 2em;
-    text-align: center;
-
+    margin-top: 2em;
+    margin-bottom: 2em;
+    @media(min-width: 750px){
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: right;
+        align-items: start;
+        gap: 2em;
+    }
 }
 
 .harry{
@@ -135,42 +153,160 @@ main{
     width: 5em;
     position: fixed;
     right: -50px;
-    /* overflow: hidden; */
 }
 
-section{
-    background-color: #F9EAC3;
-    padding: 2em;
-    width: 70%;
-    border-radius: 1em;
+.workshop-zaaien{
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    align-items: center;
+    background-image: url(../assets/zaaien.jpg);
+    background-position: center;
+    background-size: cover;
+    color: white;
+    border-radius: 1em;
+    height: 23em;
+    width: 80vw;
+    padding-inline: 1em;
+    @media(min-width: 750px){
+        height: 100%;
+        width: 80%;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        margin-left: 2em;
+    }
 }
 
-.bottom-text{
+.details-zaaien{
+    color: white;
+    max-width: 160px;
+}
+
+.extra-info{
+    padding: 1em;
+}
+
+.summary-zaaien{
+    font-weight: bold;
+    margin-top: 1em;
+    color: white;
+}
+
+.adres{
+    position: absolute;
+    margin-top: 10em ;
+}
+
+.button-green{
+    background-color: #3C593E;
+    color: #F9EAC3;
+    width: 18em;
+    height: 2em;
+    border: none;
+    border-radius: 1em;
+    position: absolute;
+    margin-top: 23em;
+    transition-duration: .3s;
+}
+
+.button-green:hover{
+    opacity: 80%;
+}
+
+.popup-button{
+    background-color: #3C593E;
+    color: #F9EAC3;
+    border: none;
+    width: 18em;
+    height: 2em;
+    border-radius: 1em;
+}
+
+.popup-button:hover{
+    opacity: 80%;
+}
+
+dialog{
+    background-color: #F9EAC3;
     color: #3C593E;
+    border-radius: 1.2em;
+    padding: .7em;
+    gap: 3em;
+    margin-left: 35em;
+    margin-top: 20em;
 }
 
-section.open{
+dialog p{
+    margin-bottom: 3em;
+}
+
+dialog::backdrop {
+    background: rgb(0 0 0 / 50%);
+}
+.extra-info{
+    width: 80vw;
+    @media(min-width: 750px){
+        width: 80%;
+        grid-row: 3/7;
+        margin-left: 2em;
+    }
+}
+
+.stekjes-maken{
     display: flex;
-    text-align: start;
-    transform: rotate(45deg);
+    flex-direction: row;
+    gap: 1em;
+    background-color: #F9EAC3;
+    width: 19em;
+    border-radius: 1.7em;
+    color: #3C593E;
+    padding-block: 1em;
+    padding-inline: 1em;
+    width: 80vw;
+    background-image: url(../assets/leaf-green.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    @media(min-width: 750px){
+        width: 80%;
+        align-items: center;
+    }
+}
+
+.stekjes-foto{
+    width: 7em;
+    height: 9em;
+    border-radius: 1em;
+    grid-row: -1/1;
+}
+
+footer section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 210px;
+    color: rgb(189, 234, 192);
+}
+
+section ul{
+    list-style: none;
+    padding: 0;
 }
 
 footer{
+    padding-block: 2em;
     background-color: #3C593E;
-    padding: 2em;
+    color: black;
+    @media(min-width: 750px){
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
 
-summary{
-    cursor: pointer;
-}
+footer ul{
+    @media(min-width: 750px){
+        max-width: 300px;
+    }
 
-.rotate{
-    animation-name: rotate;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
 }
 
 @keyframes rotate{
@@ -183,8 +319,30 @@ summary{
     }
 }
 
-@media(min-width: 750px){
-    .ham-menu{
-        display: none;
+
+@media (min-width: 1440px) {
+    .stekjes-maken {
+        width: 80%;
+        align-items: center;
     }
+    .workshop-zaaien {
+        height: 100%;
+        width: 80%;
+        grid-row-start: 1;
+        grid-row-end: 3;
+      }
+
+      main {
+        display: grid;
+        grid-template-columns: 3fr 2fr 2fr;
+        justify-content: center;
+        align-items: start;
+        gap: 2em;
+    }
+
+    .extra-info{
+        width: 80%;
+        grid-row: 3/4;
+    }
+
 }
